2008-01-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Various code improvements 

2008-01-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Experimental expunge handling. Less expunging from the local
	summary will be needed, as we'll more carefully calculate which of the
	sequence vs. uids got removed. Please keep an eye on this one and
	revert in needed. This commit should reduce the "Expunged" labels that
	you might have been seeing in tny E-mail clients too.

2008-01-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Workaround for a known problem that ain't easy to solve right now:
	expunged headers stay around for too long. When this is detected, a
	dummy header is returned (with as flags TNY_HEADER_FLAG_EXPUNGED)
	* Finished Sergio's API change

	* This was a major API change

2008-01-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Some IMAP servers don't instantly update sessions that where not in
	IDLE when in monitoring service IDLE received an EXISTS. Tinymail
	received that EXISTS, does a SEARCH to get the new UIDs, fetches the
	envelope information and displays it to the user. If the user had
	already received message recently, it will keep that message-receive
	socket running (cached) for some time (optimalization). The IMAP
	servers don't always bring that other session up-to-date about the new
	information acquired in the first session in IDLE. For example GMail's
	IMAP server and Exchange seem to not update the not-in-IDLE session.

	This commit changed the behaviour in two ways: the get-message service
	is early-killed in case an EXISTS line arrives in the in-IDLE session,
	each message-fetch request in the get-message service is prepended
	with a NOOP (some IMAP servers will sync the session upon NOOP).

	Obviously, this is experimental behaviour. Please test this a lot!

2008-01-23  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail/tny-send-queue.c
	libtinymail-camel/tny-camel-send-queue.c
	libtinymail-camel/tny-camel-send-queue.h