@@ -1716,18 +1716,23 @@ imap_auth_loop (CamelService *service, CamelException *ex, gboolean *auth)
 		}
 
 		if (!service->url->passwd) {
-			char *prompt;
+			char *base_prompt;
+			char *full_prompt;
 
-			prompt = g_strdup_printf (_("%sPlease enter the IMAP "
-				"password for %s@%s"),
-				errbuf ? errbuf : "",
-				service->url->user,
-				service->url->host);
+			base_prompt = camel_session_build_password_prompt (
+				"IMAP", service->url->user, service->url->host);
 
-			service->url->passwd =
-				camel_session_get_password (session, service, auth_domain,
-					prompt, "password", CAMEL_SESSION_PASSWORD_SECRET, ex);
-			g_free (prompt);
+			if (errbuf != NULL)
+				full_prompt = g_strconcat (errbuf, base_prompt, NULL);
+			else
+				full_prompt = g_strdup (base_prompt);
+
+			service->url->passwd = camel_session_get_password (
+				session, service, auth_domain, full_prompt,
+				"password", CAMEL_SESSION_PASSWORD_SECRET, ex);
+
+			g_free (base_prompt);
+			g_free (full_prompt);
 			g_free (errbuf);
 			errbuf = NULL;
 
@@ -1783,7 +1788,8 @@ imap_auth_loop (CamelService *service, CamelException *ex, gboolean *auth)
 			if (camel_exception_get_id(ex) == CAMEL_EXCEPTION_USER_CANCEL)
 				return FALSE;
 
-			errbuf = g_strdup_printf (_("Unable to authenticate "
+			errbuf = g_markup_escaped_text (
+				_("Unable to authenticate "
 				"to IMAP server.\n%s\n\n"),
 				camel_exception_get_description (ex));
 
