@@ -548,16 +548,23 @@ smtp_connect (CamelService *service, CamelException *ex)
 			}
 
 			if (!service->url->passwd) {
-				char *prompt;
+				char *base_prompt;
+				char *full_prompt;
 
-				prompt = g_strdup_printf (_("%sPlease enter the SMTP password for %s on host %s"),
-							  errbuf ? errbuf : "", service->url->user,
-							  service->url->host);
+				base_prompt = camel_session_build_password_prompt (
+					"SMTP", service->url->user, service->url->host);
 
-				service->url->passwd = camel_session_get_password (session, service, NULL,
-						prompt, "password", CAMEL_SESSION_PASSWORD_SECRET, ex);
+				if (errbuf != NULL)
+					full_prompt = g_strconcat (errbuf, base_prompt, NULL);
+				else
+					full_prompt = g_strdup (base_prompt);
 
-				g_free (prompt);
+				service->url->passwd = camel_session_get_password (
+					session, service, NULL, full_prompt,
+					"password", CAMEL_SESSION_PASSWORD_SECRET, ex);
+
+				g_free (base_prompt);
+				g_free (full_prompt);
 				g_free (errbuf);
 				errbuf = NULL;
 
@@ -569,9 +576,10 @@ smtp_connect (CamelService *service, CamelException *ex)
 
 			authenticated = smtp_auth (transport, authtype->authproto, ex);
 			if (!authenticated) {
-				errbuf = g_strdup_printf (_("Unable to authenticate "
-							    "to SMTP server.\n%s\n\n"),
-							  camel_exception_get_description (ex));
+				errbuf = g_markup_printf_escaped (
+					_("Unable to authenticate "
+					  "to SMTP server.\n%s\n\n"),
+					camel_exception_get_description (ex));
 				camel_exception_clear (ex);
 			}
 		}
