@@ -2,6 +2,10 @@ Note: Please use this ChangeLog file only for merge changes (from upstream to
 this version, and the other way around). Changes to camel-lite that are
 related to Tinymail go into ../../ChangeLog
 
+2008-01-27  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Merged with Camel upstream rev. 8428
+
 2008-01-12  Philip Van Hoof <pvanhoof@gnome.org>
 
         * Merged with Camel upstream rev. 8360
